<resources>
    <string name="app_name">App_SuperHeroes</string>

    <string name="my_image_description">Img</string>
    <string name="my_text_description">Text</string>

    <string name="my_intelligence_description">Intelligence</string>
    <string name="my_strength_description">Strength</string>
    <string name="my_speed_description">Speed</string>
    <string name="my_durability_description">Durability</string>
    <string name="my_power_description">Power</string>
    <string name="my_combat_description">Combat</string>
    <string name="my_test_description">Texto de prueba</string>

    <string name="full_name">Full-name:</string>
    <string name="first_appearance">First-appearance:</string>
    <string name="group_affiliation">Group_affiliation:</string>
    <string name="publisher">Publisher:</string>
    <string name="power_stats">Power stats:</string>

    <string name="superhero_name">Superhero name:</string>
</resources>