<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailSuperHeroActivity">

    <ImageView
        android:id="@+id/ivSuperhero"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/my_image_description"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="220dp"
        android:elevation="8dp"
        app:cardCornerRadius="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSuperheroName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                tools:text="@string/my_test_description" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/full_name"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tvSuperheroRealName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textStyle="italic"
                tools:text="@string/my_test_description" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/first_appearance"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tvSuperheroFirstAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textStyle="italic"
                tools:text="@string/my_test_description" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/group_affiliation"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tvSuperheroConnections"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textStyle="italic"
                tools:text="@string/my_test_description" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/publisher"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tvPublisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="11sp"
                tools:text="@string/my_test_description" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:gravity="center_horizontal"
                android:text="@string/power_stats"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <FrameLayout
                    android:id="@+id/viewIntelligence"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/superhero_stat_intelligence">

                </FrameLayout>

                <View
                    android:id="@+id/viewStrength"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/superhero_stat_strength" />

                <View
                    android:id="@+id/viewSpeed"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/superhero_stat_speed" />

                <View
                    android:id="@+id/viewDurability"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/superhero_stat_durability" />

                <View
                    android:id="@+id/viewPower"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/superhero_stat_power" />

                <View
                    android:id="@+id/viewCombat"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/superhero_stat_combat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/my_intelligence_description"
                    android:textSize="11sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/my_strength_description"
                    android:textSize="11sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/my_speed_description"
                    android:textSize="11sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/my_durability_description"
                    android:textSize="11sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/my_power_description"
                    android:textSize="11sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/my_combat_description"
                    android:textSize="11sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>